--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "tron-address-mnemonic": "^1.0.0",
     "tron-wallet-hd": "^2.0.2",
     "tronweb": "^4.4.0"
   },
   "engines": {
     "node": "16.15.1"
   }
-
 }
