--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bitcore-lib": "^8.25.40",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
