--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bitcore-lib": "^8.25.40",
+    "bitcore-mnemonic": "^8.25.40",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
