--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "bitcore-mnemonic": "^8.25.40",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "multichain-crypto-wallet": "^0.2.7",
     "nodemon": "^2.0.20",
+    "send-crypto": "^0.2.38",
     "tron-address-mnemonic": "^1.0.0",
     "tron-wallet-hd": "^2.0.2",
     "tronweb": "^4.4.0"
