--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base58-js": "^1.0.5",
     "bitcore-lib": "^8.25.40",
     "bitcore-mnemonic": "^8.25.40",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "multichain-crypto-wallet": "^0.2.7",
+    "multichain-crypto-wallet": "^0.2.4",
     "nodemon": "^2.0.20",
-    "send-crypto": "^0.2.38",
+    "send-crypto": "^0.2.21",
     "tron-address-mnemonic": "^1.0.0",
-    "tron-wallet-hd": "^2.0.2",
+    "tron-wallet-hd": "^1.0.1",
     "tronweb": "^4.4.0"
   },
   "engines": {
